--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,8 @@
     <color name="colorGreyBackground">#2A2A2A</color>
     <color name="colorBlackBackground">#000000</color>
     <color name="colorBackground">#BE000000</color>
-    <color name="colorConsoleBackground">#70000000</color>
+    <color name="colorConsoleBackground">#45000000</color>
+    <color name="colorConsoleBackgroundRow">#88EF2F48</color>
 
     <color name="colorBlack">#000000</color>
 
