--- a/app/src/main/res/layout/activity_main_general.xml
+++ b/app/src/main/res/layout/activity_main_general.xml
@@ -61,39 +61,6 @@
             android:contentDescription="@string/image"/>
 
         <LinearLayout
-            android:id="@+id/activity_main_general_ll_btn_case_2"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_below="@id/activity_main_general_ll_btn_case_1"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/activity_main_general_iv_btn_help"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="1"
-                android:onClick="onClickMenu"
-                app:srcCompat="@drawable/im_help_btn_off"
-                android:contentDescription="@string/image"/>
-
-            <ImageView
-                android:id="@+id/activity_main_general_iv_btn_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="1"
-                android:onClick="onClickMenu"
-                app:srcCompat="@drawable/im_share_btn_off"
-                android:contentDescription="@string/image"/>
-
-        </LinearLayout>
-
-        <LinearLayout
             android:id="@+id/activity_main_general_ll_btn_case_1"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -108,9 +75,9 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
+                android:contentDescription="@string/image"
                 android:onClick="onClickMenu"
-                app:srcCompat="@drawable/im_create_btn_off"
-                android:contentDescription="@string/image"/>
+                app:srcCompat="@drawable/im_create_btn_off" />
 
             <ImageView
                 android:id="@+id/activity_main_general_iv_btn_author"
@@ -120,9 +87,76 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
+                android:contentDescription="@string/image"
+                android:onClick="onClickMenu"
+                app:srcCompat="@drawable/im_author_btn_off" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/activity_main_general_ll_btn_case_2"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/activity_main_general_ll_btn_case_1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/activity_main_general_iv_btn_set_wallpaper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/image"
+                android:onClick="onClickMenu"
+                app:srcCompat="@drawable/im_wallpaper_btn_off" />
+
+            <ImageView
+                android:id="@+id/activity_main_general_iv_btn_help"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:onClick="onClickMenu"
+                app:srcCompat="@drawable/im_help_btn_off"
+                android:contentDescription="@string/image"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/activity_main_general_ll_btn_case_3"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_below="@+id/activity_main_general_ll_btn_case_2"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/activity_main_general_iv_btn_alpha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
                 android:onClick="onClickMenu"
                 app:srcCompat="@drawable/im_author_btn_off"
-                android:contentDescription="@string/image" />
+                android:contentDescription="@string/image"
+                android:visibility="invisible"/>
+
+            <ImageView
+                android:id="@+id/activity_main_general_iv_btn_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/image"
+                android:onClick="onClickMenu"
+                app:srcCompat="@drawable/im_share_btn_off" />
 
         </LinearLayout>
 
