--- a/app/src/main/res/layout/activity_wallpaper_setter.xml
+++ b/app/src/main/res/layout/activity_wallpaper_setter.xml
@@ -5,11 +5,20 @@
     android:layout_height="match_parent"
     android:background="@drawable/im_background_3">
 
+    <ProgressBar
+        android:id="@+id/activity_wallpaper_setter_pb"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible" />
+
     <RelativeLayout
         android:id="@+id/activity_wallpaper_setter_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/textView"
+        android:layout_below="@id/activity_wallpaper_setter_pb"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
