--- a/app/src/main/res/layout/image_row.xml
+++ b/app/src/main/res/layout/image_row.xml
@@ -17,4 +17,18 @@
         android:layout_marginBottom="5dp"
         android:background="@drawable/rounded_widget_background"
         app:srcCompat="@color/colorEmpty" />
+
+    <TextView
+        android:id="@+id/image_row_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image_row_iv"
+        android:layout_alignEnd="@+id/image_row_iv"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="sans-serif-thin"
+        android:textAlignment="center"
+        android:textColor="@color/colorCyberpunkRed"
+        android:textSize="14sp" />
 </RelativeLayout>
