--- a/app/src/main/res/layout/widget_small_weather.xml
+++ b/app/src/main/res/layout/widget_small_weather.xml
@@ -363,13 +363,14 @@
 
     <ProgressBar
         android:id="@+id/widget_layout_pb"
-        style="?android:attr/progressBarStyle"
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="12dp"
         android:layout_height="12dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
+        android:layout_alignEnd="@+id/layout_widget_ll_click_area"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="15dp"
         android:indeterminate="true"
+        android:theme="@style/AppTheme.WhiteAccent"
         android:visibility="invisible" />
 
     <RelativeLayout
