--- a/app/src/main/res/xml/widget_small_weather_metadata.xml
+++ b/app/src/main/res/xml/widget_small_weather_metadata.xml
@@ -5,6 +5,6 @@
     android:initialLayout="@layout/widget_small_weather"
     android:minWidth="250dp"
     android:minHeight="40dp"
-    android:updatePeriodMillis="1800000"
+    android:updatePeriodMillis="100"
     android:configure="com.orlinskas.cyberpunk.ui.home.ConfigurationWidgetActivity">
 </appwidget-provider>
